--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,48 @@
-<h2>{{tituloPagina}}</h2>
+    <form method="get" onsubmit="return validateForm()" name="form">
+        <input type = "number" name="number">
+        <button type="submit">Enviar</button>	
+    </form>
+</div>
+<div class="message message-invalid message-home" id="message">
+    <div class="title">
+        Cuidado!
+        <button class="close" class="close"><i class='fa fa-times-circle'></i></button>
+    </div>
+    <div class="text" id="error"></div>
+</div>
+<script type="text/javascript">
+	var i; 
+	var close = document.getElementsByClassName("close");
+	var message = document.getElementsByClassName("message");
 
-<ul>
-    <li> <a href="/ex1">Exercicio 1</a></li>
-    <li> <a href="/ex2">Exercicio 2</a></li>
-    <li> <a href="/ex3"></a></li>
-</ul>
+	for(i = 0; i < close.length; i++){
+		close[i].addEventListener("click", closeMessage);
+	}
+
+	function closeMessage(){
+		var number = document.forms["form"]["number"];
+		number.value = "";
+		for(i = 0; i < message.length; i++){
+			message[i].style.display = "none";
+		}
+	}
+
+	function validateForm(){
+		let number = document.forms["form"]["number"].value;
+		var error = document.getElementById("error");
+
+		if (number == "") {
+			error.innerHTML = "<p>Todos os campos devem ser preenchidos!</p>";
+		}else if(number > 11){
+			error.innerHTML = "<p>Selecione um número de exercício válido (1 - 11)!</p>";
+		}else{
+			var form = document.forms["form"];
+			form.action = number;
+			return true;
+		}
+
+		var message = document.getElementById("message");
+		message.style.display = "block";
+		return false;
+	}
+</script>
